--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -32,6 +32,7 @@ body {
 
 /*background: color image repeat position/size */
   background: var(--bg-url) top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -156,4 +157,13 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+/* media queries */
+@media (min-width: 700px) {
+  :root{
+    --bg url: url(./assets/bg-desktop;jpg);
+  }
+  .light--bg {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
