--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -77,17 +77,20 @@ body * {
   border-radius: 50%;
 
   position: absolute;
-  right: 0;
+  top: 50%;
+  left: 0;
   z-index: 1;
   transform: translateY(-50%);
-  top: 50%;
+  
+  animation: slide-back: 0.2s;
 }
-
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
 }
-
+ #switch button:hover {
+  outline: 8px solid var(--highligth-color);
+ }
+  
 #switch span {
   display: block;
   width: 64px;
@@ -162,8 +165,27 @@ footer {
 @media (min-width: 700px) {
   :root{
     --bg url: url(./assets/bg-desktop;jpg);
+   
   }
   .light--bg {
     --bg-url: url(./assets/bg-desktop-light.jpg);
   }
 }
+  /*animations  */
+  @keyframes slide-in {
+    from {
+      left: 0;
+    }
+    to {
+      left: 50%;
+    }
+  }
+  @keyframes slide-back {
+    from{
+      left: 50%
+    }
+    to {
+      left: 0;
+    }
+  }
+
